--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,16 @@ chardet==3.0.4
 cycler==0.10.0
 future==0.16.0
 gym==0.10.8
+h5py==2.8.0
 idna==2.7
+Keras==2.2.4
+Keras-Applications==1.0.6
+Keras-Preprocessing==1.0.5
 kiwisolver==1.0.1
 matplotlib==3.0.0
 numpy==1.15.3
 Pillow==5.3.0
+protobuf==3.1.0
 pyglet==1.3.2
 pyobjc==5.1
 pyobjc-core==5.1
@@ -112,7 +117,9 @@ pyobjc-framework-WebKit==5.1
 PyOpenGL==3.1.0
 pyparsing==2.2.2
 python-dateutil==2.7.4
+PyYAML==3.13
 requests==2.20.0
 scipy==1.1.0
 six==1.11.0
+tensorflow==0.12.0
 urllib3==1.24
