--- a/web/package.json
+++ b/web/package.json
@@ -12,14 +12,15 @@
     "node-sass": "4.9.3",
     "perfect-scrollbar": "1.4.0",
     "prop-types": "^15.6.2",
+    "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
+    "react-dom": "^16.6.3",
     "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.8",
+    "react-player": "^1.7.1",
     "react-router-dom": "4.3.1",
-    "reactstrap": "6.5.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "reactstrap": "6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
