chore: point to subdomain

--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,7 @@
   "name": "web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://raiprabh.github.com/lunar-lander/",
+  "homepage": "https://lunarlander.prabhjotrai.com/",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
